--- a/vertx-lang-js/pom.xml
+++ b/vertx-lang-js/pom.xml
@@ -2,10 +2,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
   <parent>
+    <artifactId>vertx-base-stack</artifactId>
     <groupId>io.vertx</groupId>
-    <artifactId>vertx-lang-js-parent</artifactId>
     <version>3.6.0-SNAPSHOT</version>
-    <relativePath>../pom.xml</relativePath>
+    <relativePath></relativePath>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
@@ -26,35 +26,18 @@
       <version>3.6.0-SNAPSHOT</version>
     </dependency>
     <dependency>
-      <groupId>io.vertx</groupId>
-      <artifactId>vertx-codegen</artifactId>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>io.vertx</groupId>
-      <artifactId>vertx-docgen</artifactId>
-      <optional>true</optional>
-    </dependency>
-    <dependency>
-      <groupId>io.vertx</groupId>
-      <artifactId>vertx-core</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>io.vertx</groupId>
-      <artifactId>vertx-core</artifactId>
-      <classifier>sources</classifier>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>io.vertx</groupId>
-      <artifactId>vertx-codetrans</artifactId>
-      <optional>true</optional>
-    </dependency>
-    <dependency>
       <groupId>org.mvel</groupId>
       <artifactId>mvel2</artifactId>
       <version>2.2.8.Final</version>
       <scope>provided</scope>
+    </dependency>
+
+    <!-- Test dependencies -->
+    <dependency>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-core</artifactId>
+      <type>test-jar</type>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
@@ -63,10 +46,27 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>com.jayway.awaitility</groupId>
+      <artifactId>awaitility</artifactId>
+      <version>1.7.0</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <version>3.3.0</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>io.vertx</groupId>
       <artifactId>vertx-lang-js-codegen</artifactId>
       <version>3.6.0-SNAPSHOT</version>
       <type>test-jar</type>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-web-templ-freemarker</artifactId>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -91,52 +91,60 @@
             </environmentVariables>
           </configuration>
         </plugin>
-        <plugin>
-          <artifactId>maven-clean-plugin</artifactId>
-          <executions>
-            <execution>
-              <id>default-clean</id>
-              <configuration>
-                <filesets>
-                  <fileset>
-                    <directory>${asciidoc.dir}</directory>
-                  </fileset>
-                </filesets>
-              </configuration>
-            </execution>
-          </executions>
-        </plugin>
       </plugins>
     </pluginManagement>
+
     <plugins>
       <plugin>
         <artifactId>maven-dependency-plugin</artifactId>
+        <version>3.0.2</version>
         <executions>
-          <!-- Unpack vertx-core source code to target/vertx-core -->
+          <!-- Unpack sources to target/sources -->
           <execution>
-            <id>unpack-vertx-core</id>
-            <phase>generate-sources</phase>
-            <goals>
-              <goal>unpack-dependencies</goal>
-            </goals>
-            <configuration>
-              <includeGroupIds>io.vertx</includeGroupIds>
-              <includeArtifactIds>vertx-core</includeArtifactIds>
-              <includeTypes>jar</includeTypes>
-              <includeClassifiers>sources</includeClassifiers>
-              <includes>io/vertx/core/**/*.java,examples/**/*.java</includes>
-              <excludes>**/impl/**/*.java,**/logging/**/*.java</excludes>
-              <outputDirectory>${project.build.directory}/sources/vertx-core</outputDirectory>
-            </configuration>
+            <id>unpack-java</id>
+          </execution>
+          <execution>
+            <id>unpack-asciidoc</id>
           </execution>
         </executions>
       </plugin>
+
       <plugin>
         <groupId>org.bsc.maven</groupId>
         <artifactId>maven-processor-plugin</artifactId>
         <version>3.1.0</version>
         <executions>
-          <!-- Run the annotation processor on vertx-core and generate the js API -->
+          <execution>
+            <id>generate-sources</id>
+          </execution>
+          <execution>
+            <id>generate-doc</id>
+          </execution>
+          <execution>
+            <id>generate-test-sources</id>
+            <goals>
+              <goal>process-test</goal>
+            </goals>
+            <phase>generate-test-sources</phase>
+            <configuration>
+              <processors>
+                <processor>io.vertx.codegen.CodeGenProcessor</processor>
+              </processors>
+              <optionMap>
+                <outputDirectory>${project.basedir}/src/test</outputDirectory>
+              </optionMap>
+              <defaultOutputDirectory>${project.build.directory}/generated-test-sources/test-annotations</defaultOutputDirectory>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
+      <!--
+      <plugin>
+        <groupId>org.bsc.maven</groupId>
+        <artifactId>maven-processor-plugin</artifactId>
+        <version>3.1.0</version>
+        <executions>
           <execution>
             <id>generate-vertx-core</id>
             <goals>
@@ -159,7 +167,6 @@
             </configuration>
           </execution>
 
-          <!-- We have to run the annotation processor again to process doc overrides -->
           <execution>
             <id>docgen-docs</id>
             <goals>
@@ -180,7 +187,6 @@
             </configuration>
           </execution>
 
-          <!-- We have to run the annotation processor again to process doc overrides -->
           <execution>
             <id>docgen-docoverrides</id>
             <goals>
@@ -212,6 +218,7 @@
           </dependency>
         </dependencies>
       </plugin>
+      -->
       <!--
       <plugin>
         <groupId>com.phasebash.jsdoc</groupId>
@@ -234,6 +241,7 @@
         </executions>
       </plugin>
       -->
+      <!--
       <plugin>
         <groupId>org.asciidoctor</groupId>
         <artifactId>asciidoctor-maven-plugin</artifactId>
@@ -264,6 +272,7 @@
           </execution>
         </executions>
       </plugin>
+      -->
     </plugins>
   </build>
 
