--- a/vertx-lang-js/pom.xml
+++ b/vertx-lang-js/pom.xml
@@ -97,9 +97,7 @@
     <plugins>
       <plugin>
         <artifactId>maven-dependency-plugin</artifactId>
-        <version>3.0.2</version>
         <executions>
-          <!-- Unpack sources to target/sources -->
           <execution>
             <id>unpack-java</id>
           </execution>
@@ -110,9 +108,21 @@
       </plugin>
 
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-antrun-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>rename-asciidoc</id>
+          </execution>
+          <execution>
+            <id>copy-asciidoc-override</id>
+          </execution>
+        </executions>
+      </plugin>
+
+      <plugin>
         <groupId>org.bsc.maven</groupId>
         <artifactId>maven-processor-plugin</artifactId>
-        <version>3.1.0</version>
         <executions>
           <execution>
             <id>generate-sources</id>
@@ -139,6 +149,41 @@
         </executions>
       </plugin>
 
+      <plugin>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <dependencies>
+          <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-ext-resources</artifactId>
+            <version>30</version>
+          </dependency>
+        </dependencies>
+        <executions>
+          <execution>
+            <id>package-docs</id>
+          </execution>
+        </executions>
+      </plugin>
+
+      <plugin>
+        <groupId>com.phasebash.jsdoc</groupId>
+        <artifactId>jsdoc3-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <phase>process-resources</phase>
+            <goals>
+              <goal>jsdoc3</goal>
+            </goals>
+            <configuration>
+              <recursive>true</recursive>
+              <directoryRoots>
+                <directoryRoot>${project.build.outputDirectory}</directoryRoot>
+              </directoryRoots>
+              <outputDirectory>${project.build.directory}/asciidoc/jsdoc</outputDirectory>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
       <!--
       <plugin>
         <groupId>org.bsc.maven</groupId>
