--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,10 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>vertx-lang-js</artifactId>
-  <version>3.5.2.CR2</version>
+  <version>3.5.2-SNAPSHOT</version>
 
   <properties>
-    <stack.version>3.5.2.CR2</stack.version>
+    <stack.version>3.5.2-SNAPSHOT</stack.version>
     <asciidoc.dir>${project.basedir}/src/main/asciidoc</asciidoc.dir>
     <tools.jar>${java.home}/../lib/tools.jar</tools.jar>
   </properties>
