--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
   </dependencyManagement>
 
   <modules>
-    <module>vertx-lang-js-codegen</module>
+    <module>vertx-lang-js-gen</module>
     <module>vertx-lang-js</module>
     <module>vertx-rx-js</module>
   </modules>
