--- a/vertx-lang-js-gen/pom.xml
+++ b/vertx-lang-js-gen/pom.xml
@@ -10,7 +10,7 @@
 
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>vertx-lang-js-codegen</artifactId>
+  <artifactId>vertx-lang-js-gen</artifactId>
   <version>3.6.0-SNAPSHOT</version>
 
   <name>Vert.x JavaScript Language Support</name>
