--- a/vertx-lang-js/pom.xml
+++ b/vertx-lang-js/pom.xml
@@ -337,7 +337,7 @@
     <!-- Extra dependencies -->
     <dependency>
       <groupId>io.vertx</groupId>
-      <artifactId>vertx-lang-js-codegen</artifactId>
+      <artifactId>vertx-lang-js-gen</artifactId>
       <version>3.6.0-SNAPSHOT</version>
     </dependency>
     <dependency>
@@ -374,7 +374,7 @@
     </dependency>
     <dependency>
       <groupId>io.vertx</groupId>
-      <artifactId>vertx-lang-js-codegen</artifactId>
+      <artifactId>vertx-lang-js-gen</artifactId>
       <version>3.6.0-SNAPSHOT</version>
       <type>test-jar</type>
       <scope>test</scope>
