--- a/vertx-lang-js/pom.xml
+++ b/vertx-lang-js/pom.xml
@@ -69,6 +69,11 @@
     </dependency>
     <dependency>
       <groupId>io.vertx</groupId>
+      <artifactId>vertx-cassandra-client</artifactId>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>io.vertx</groupId>
       <artifactId>vertx-jdbc-client</artifactId>
       <optional>true</optional>
     </dependency>
@@ -417,6 +422,7 @@
             vertx-sql-common,
             vertx-mongo-client,
             vertx-mongo-service,
+            vertx-cassandra-client,
             vertx-jdbc-client,
             vertx-auth-common,
             vertx-auth-jdbc,
