--- a/vertx-lang-js/pom.xml
+++ b/vertx-lang-js/pom.xml
@@ -64,11 +64,6 @@
     </dependency>
     <dependency>
       <groupId>io.vertx</groupId>
-      <artifactId>vertx-mongo-service</artifactId>
-      <optional>true</optional>
-    </dependency>
-    <dependency>
-      <groupId>io.vertx</groupId>
       <artifactId>vertx-cassandra-client</artifactId>
       <optional>true</optional>
     </dependency>
@@ -200,17 +195,7 @@
     </dependency>
     <dependency>
       <groupId>io.vertx</groupId>
-      <artifactId>vertx-mail-service</artifactId>
-      <optional>true</optional>
-    </dependency>
-    <dependency>
-      <groupId>io.vertx</groupId>
       <artifactId>vertx-consul-client</artifactId>
-      <optional>true</optional>
-    </dependency>
-    <dependency>
-      <groupId>io.vertx</groupId>
-      <artifactId>vertx-consul-service</artifactId>
       <optional>true</optional>
     </dependency>
     <dependency>
@@ -265,22 +250,12 @@
     </dependency>
     <dependency>
       <groupId>io.vertx</groupId>
-      <artifactId>vertx-amqp-bridge</artifactId>
-      <optional>true</optional>
-    </dependency>
-    <dependency>
-      <groupId>io.vertx</groupId>
       <artifactId>vertx-kafka-client</artifactId>
       <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>io.vertx</groupId>
       <artifactId>vertx-mqtt</artifactId>
-      <optional>true</optional>
-    </dependency>
-    <dependency>
-      <groupId>io.vertx</groupId>
-      <artifactId>vertx-mysql-postgresql-client</artifactId>
       <optional>true</optional>
     </dependency>
     <dependency>
@@ -349,6 +324,11 @@
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-service-proxy</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
@@ -386,7 +366,6 @@
             vertx-bridge-common,
             vertx-sql-common,
             vertx-mongo-client,
-            vertx-mongo-service,
             vertx-cassandra-client,
             vertx-jdbc-client,
             vertx-auth-common,
@@ -413,9 +392,7 @@
             vertx-redis-client,
             vertx-stomp,
             vertx-mail-client,
-            vertx-mail-service,
             vertx-consul-client,
-            vertx-consul-service,
             vertx-service-discovery,
             vertx-service-discovery-backend-consul,
             vertx-service-discovery-backend-redis,
@@ -426,10 +403,8 @@
             vertx-service-discovery-bridge-zookeeper,
             vertx-service-discovery-bridge-docker-links,
             vertx-config,
-            vertx-amqp-bridge,
             vertx-kafka-client,
             vertx-mqtt,
-            vertx-mysql-postgresql-client,
             vertx-rabbitmq-client,
             vertx-health-check,
             vertx-shell,
