--- a/vertx-lang-js/pom.xml
+++ b/vertx-lang-js/pom.xml
@@ -303,6 +303,11 @@
       <artifactId>vertx-micrometer-metrics</artifactId>
       <optional>true</optional>
     </dependency>
+    <dependency>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-tcp-eventbus-bridge</artifactId>
+      <optional>true</optional>
+    </dependency>
 
     <!-- Extra dependencies -->
     <dependency>
@@ -433,7 +438,8 @@
             vertx-rabbitmq-client,
             vertx-health-check,
             vertx-shell,
-            vertx-micrometer-metrics
+            vertx-micrometer-metrics,
+            vertx-tcp-eventbus-bridge
           </includeArtifactIds>
           <classifier>sources</classifier>
           <includeTypes>jar</includeTypes>
