--- a/vertx-lang-js/pom.xml
+++ b/vertx-lang-js/pom.xml
@@ -279,6 +279,21 @@
     </dependency>
     <dependency>
       <groupId>io.vertx</groupId>
+      <artifactId>vertx-sql-client</artifactId>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-pg-client</artifactId>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-mysql-client</artifactId>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>io.vertx</groupId>
       <artifactId>vertx-rabbitmq-client</artifactId>
       <optional>true</optional>
     </dependency>
@@ -432,6 +447,9 @@
             vertx-config,
             vertx-kafka-client,
             vertx-mqtt,
+            vertx-sql-client,
+            vertx-pg-client,
+            vertx-mysql-client,
             vertx-rabbitmq-client,
             vertx-health-check,
             vertx-shell,
