--- a/vertx-lang-js/pom.xml
+++ b/vertx-lang-js/pom.xml
@@ -16,6 +16,8 @@
   <properties>
     <tools.jar>${java.home}/../lib/tools.jar</tools.jar>
     <asciidoc.path>/js</asciidoc.path>
+    <graphql.java.major.version>12</graphql.java.major.version>
+    <graphql.java.version>${graphql.java.major.version}.0</graphql.java.version>
   </properties>
 
   <dependencies>
@@ -602,6 +604,7 @@
                 <maven.groupId>${project.groupId}</maven.groupId>
                 <maven.artifactId>${project.artifactId}</maven.artifactId>
                 <maven.version>${project.version}</maven.version>
+                <graphql.java.doc.version>v${graphql.java.major.version}</graphql.java.doc.version>
               </optionMap>
             </configuration>
           </execution>
