--- a/vertx-lang-js/pom.xml
+++ b/vertx-lang-js/pom.xml
@@ -18,6 +18,8 @@
     <asciidoc.path>/js</asciidoc.path>
     <graphql.java.major.version>12</graphql.java.major.version>
     <graphql.java.version>${graphql.java.major.version}.0</graphql.java.version>
+    <datastax-driver.minor.version>3.5</datastax-driver.minor.version>
+    <datastax-driver.version>${datastax-driver.minor.version}.0</datastax-driver.version>
   </properties>
 
   <dependencies>
@@ -587,6 +589,8 @@
                 <maven.artifactId>${project.artifactId}</maven.artifactId>
                 <maven.version>${project.version}</maven.version>
                 <graphql.java.doc.version>v${graphql.java.major.version}</graphql.java.doc.version>
+                <datastax.driver.minor.version>${datastax-driver.minor.version}</datastax.driver.minor.version>
+                <datastax.driver.version>${datastax-driver.version}</datastax.driver.version>
               </optionMap>
             </configuration>
           </execution>
