--- a/vertx-lang-js-gen/pom.xml
+++ b/vertx-lang-js-gen/pom.xml
@@ -4,14 +4,14 @@
   <parent>
     <groupId>io.vertx</groupId>
     <artifactId>vertx-lang-js-parent</artifactId>
-    <version>4.0.0-SNAPSHOT</version>
+    <version>4.0.0-milestone4</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>vertx-lang-js-gen</artifactId>
-  <version>4.0.0-SNAPSHOT</version>
+  <version>4.0.0-milestone4</version>
 
   <name>Vert.x JavaScript Language Support</name>
 
