--- a/pom.xml
+++ b/pom.xml
@@ -11,10 +11,10 @@
 
   <packaging>pom</packaging>
   <artifactId>vertx-lang-js-parent</artifactId>
-  <version>4.0.0-milestone4</version>
+  <version>4.0.0-SNAPSHOT</version>
 
   <properties>
-    <stack.version>4.0.0-milestone4</stack.version>
+    <stack.version>4.0.0-SNAPSHOT</stack.version>
   </properties>
 
   <dependencyManagement>
