--- a/pom.xml
+++ b/pom.xml
@@ -11,10 +11,10 @@
 
   <packaging>pom</packaging>
   <artifactId>vertx-lang-js-parent</artifactId>
-  <version>3.9.1</version>
+  <version>3.9.2-SNAPSHOT</version>
 
   <properties>
-    <stack.version>3.9.1</stack.version>
+    <stack.version>3.9.2-SNAPSHOT</stack.version>
   </properties>
 
   <dependencyManagement>
