--- a/vertx-lang-js/pom.xml
+++ b/vertx-lang-js/pom.xml
@@ -309,6 +309,11 @@
     </dependency>
     <dependency>
       <groupId>io.vertx</groupId>
+      <artifactId>vertx-db2-client</artifactId>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>io.vertx</groupId>
       <artifactId>vertx-mysql-postgresql-client</artifactId>
       <optional>true</optional>
     </dependency>
@@ -468,6 +473,7 @@
             vertx-sql-client,
             vertx-pg-client,
             vertx-mysql-client,
+            vertx-db2-client,
             vertx-mysql-postgresql-client,
             vertx-rabbitmq-client,
             vertx-health-check,
