--- a/pom.xml
+++ b/pom.xml
@@ -1,44 +1,66 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
-  <parent>
-    <groupId>io.vertx</groupId>
-    <artifactId>vertx-parent</artifactId>
-    <version>19</version>
-  </parent>
-
-  <modelVersion>4.0.0</modelVersion>
-
-  <packaging>pom</packaging>
-  <artifactId>vertx-lang-js-parent</artifactId>
-  <version>3.9.9-SNAPSHOT</version>
-
-  <properties>
-    <stack.version>3.9.9-SNAPSHOT</stack.version>
-  </properties>
-
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
+      
+    <parent>
+            
         <groupId>io.vertx</groupId>
-        <artifactId>vertx-dependencies</artifactId>
-        <version>${stack.version}</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
-
-  <modules>
-    <module>vertx-lang-js-gen</module>
-    <module>vertx-lang-js</module>
-    <module>vertx-rx-js</module>
-  </modules>
-
-  <dependencies>
+            
+        <artifactId>vertx-parent</artifactId>
+            
+        <version>19</version>
+          
+    </parent>
+      
+    <modelVersion>4.0.0</modelVersion>
+      
+    <packaging>pom</packaging>
+      
+    <artifactId>vertx-lang-js-parent</artifactId>
+      
+    <version>3.9.9</version>
+      
+    <properties>
+            
+        <stack.version>3.9.9</stack.version>
+          
+    </properties>
+      
+    <dependencyManagement>
+            
+        <dependencies>
+                  
+            <dependency>
+                        
+                <groupId>io.vertx</groupId>
+                        
+                <artifactId>vertx-dependencies</artifactId>
+                        
+                <version>${stack.version}</version>
+                        
+                <type>pom</type>
+                        
+                <scope>import</scope>
+                      
+            </dependency>
+                
+        </dependencies>
+          
+    </dependencyManagement>
+      
+    <modules>
+            
+        <module>vertx-lang-js-gen</module>
+            
+        <module>vertx-lang-js</module>
+            
+        <module>vertx-rx-js</module>
+          
+    </modules>
+      
+    <dependencies>
   </dependencies>
-
-  <build>
+      
+    <build>
   </build>
-
+    
 </project>
